--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -191,14 +191,17 @@
     width: 15vmin;
     height: 2vmin;
     background: #545454;
+    animation: fadeIn .2s ease-out forwards;
   }
 
   .cell.X:before {
     transform: translate(-50%, -50%) rotate(45deg);
+    animation: fadeIn .2s ease-out forwards;
   }
 
   .cell.X:after {
     transform: translate(-50%, -50%) rotate(-45deg);
+    animation: fadeIn .2s ease-out forwards;
   }
 
   .cell.O:before,
@@ -212,5 +215,6 @@
     height: 10vmin;
     border-radius: 50%;
     border: 2vmin solid #f2ebd3;
+    animation: fadeIn .2s ease-out forwards;
   }
 }
